--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <h5>Learning HTML, CSS, Bootstrap and JavaScript</h5>
         </div>
         <div class="col-lg-12 profilecol">
-          <img class="profilepic img-fluid" src="/AvatarMaker.svg" />
+          <img class="profilepic img-fluid" src="AvatarMaker.svg" />
         </div>
         <div class="col-lg-12 socialcol ">
           <p>Connect with me, let's work together.</p>
